--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -1,6 +1,9 @@
-%article.video_category
-  .videos.row
-    - @videos.each do |video|
-      .video.col-sm-2
-        = link_to "", video, nil do
-          %img(src="#{video.cover_image_url}")
+/ %article.video_category
+/ 	- @categories.each do |category|
+/ 	  %header
+/ 	    %h3= category.name
+/ 	  .videos.row
+/ 	    -category.recent_videos.each do |video|
+/ 	      .video.col-sm-2
+/ 	        =link_to video_path(video) do
+/ 	          %img(src="#{video.cover_image_url}")
