--- a/app/views/app_mailer/send_forgot_password.html.haml
+++ b/app/views/app_mailer/send_forgot_password.html.haml
@@ -2,4 +2,4 @@
 %html(lang="en-US")
   %body
     %p Please click on the link below to reset your password
-    %p= link_to "Reset my passwod", password_reset_url(@user.token)
+    %p= link_to "Reset My Passwod", password_reset_url(@user.token)
