--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -9,7 +9,7 @@
           %span Rating: 4.5/5.0
         %p= @video.description
         .actions
-          %a.btn.btn-primary(href="#{@video.video_url}") Watch Now
+          = link_to 'Watch Now', @video.video_url, class: "btn btn-primary"
           = link_to "+ My Queue", queue_items_path(video_id: @video.id), method: :post, class: "btn" unless current_user.queued_video?(@video)
 
 %section.reviews.container
