--- a/app/views/admin/videos/new.html.haml
+++ b/app/views/admin/videos/new.html.haml
@@ -2,7 +2,7 @@
   .container
     .row
       .col-md-10.col-md-offset-1
-        = bootstrap_form_for [:admin, @video], class: "form-horizontal" do |f|
+        = bootstrap_form_for [:admin, @video], layout: :horizontal do |f|
           %ul.nav.nav-tabs
             %li
               %a(href="/ui/admin_views_payments") Recent Payments
@@ -10,12 +10,12 @@
               %a(href="") Add a New Video
           %br
           %fieldset
-            = f.text_field :title, class: "span3"
+            = f.text_field :title, class: "col-sm-3"
             = f.select :category_id, options_for_select(Category.all.map{|x| [x.name, x.id]})
             = f.text_area :description, rows: 8, class: "span6"
             = f.file_field :large_cover, class: "btn btn-file"
             = f.file_field :small_cover, class: "btn btn-file"
-            = f.text_field :video_url, class: "span3", label: "Video URL"
+            = f.text_field :video_url, class: "col-sm-3", label: "Video URL"
 
           %fieldset.actions.form-group
             .col-sm-6.col-md-offset-3
