--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -11,4 +11,4 @@
           = hidden_field_tag :invitation_token, @invitation_token
         %fieldset.actions.control-group.col-sm-offset-2
           .controls
-            <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key=#{ENV['STRIPE_PUBLISHABLE_KEY']} data-amount="999" data-name="Myflix sign up charge" data-description="$9.9 to sign up the best video service"></script>
+            <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button" data-key=#{ENV['STRIPE_PUBLISHABLE_KEY']} data-amount="999" data-name="Myflix sign up charge" data-description="$9.9 to sign up the best video service" data-currency="usd"></script>
