--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -4,6 +4,8 @@ section#top-header
   margin-bottom: 20px
   padding: 12px 0
   border-radius: 5px
+  .search-btn
+    margin-left: 10px
   a
     color: white
   h1
@@ -12,7 +14,7 @@ section#top-header
     padding-top: 12px
     li
       float: left
-      margin-right: 30px
+      margin-right: 15px
       text-transform: uppercase
       &:first-of-type
         margin-left: -15px
@@ -20,7 +22,7 @@ section#top-header
     padding-top: 6px
     margin: 0
     input[type="text"]
-      width: 320px
+      width: 160px
       float: left
     input[type="submit"]
       margin-left: 10px
@@ -30,7 +32,7 @@ section#top-header
     > ul
       > li
         float: left
-        width: 200px
+        width: 150px
         a
           margin: 0 10px
           b
