--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,15 +2,17 @@
   %h1.col-md-2
     = link_to "MyFLiX", home_path
   - if current_user
-    %ul.col-md-4.clearfix
+    %ul.col-md-5.clearfix
       %li= link_to "Videos", home_path
       %li= link_to "My Queue", my_queue_path
       %li= link_to "People", people_path
-    = form_tag search_videos_path, method: :get, class: "span5 for-search" do
+      %li= link_to "Invite Friend", new_invitation_path
+      %li= link_to "Advanced Search", advanced_search_videos_path
+    = form_tag search_videos_path, method: :get, class: "col-md-3 for-search" do
       .form-group
         %input.form-control(name="search_term" type="text" placeholder="Search for videos here")
-      %button.btn.btn-default(type="submit") Search
-    #user_links.pull-right
+        %button.btn.btn-default.search-btn(type="submit") Search
+    #user_links.col-md-2
       %ul
         %li.dropdown
           %a(href="#" id="dlabel" role="button" data-toggle="dropdown" class="dropdown-toggle" data-target="#")
